Updated Python FSD File

--- a/shop/templates/shop/inc/footer.html
+++ b/shop/templates/shop/inc/footer.html
@@ -2,7 +2,7 @@
 <footer class="text-center text-lg-start bg-dark text-white">
     <section class="container d-flex justify-content-center justify-content-lg-between p-4">
         <div class="me-5 d-none d-lg-block">
-            <span>Get Connected with us on Socical Networks:</span>
+            <span style="color: cadetblue;">Get Connected with us on Socical Networks:</span>
         </div>
         <div>
             <a href="" class="me-4 text-reset"><i class="fa fa-facebook"></i></a>
@@ -20,7 +20,7 @@
                 <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
                     <h6 class="text-uppercase fw-bold mb-4"> BuyZone !</h6>
                     <p>BuyZone is one stop destination for you and your's family fashion needs.
-                        <i style="color: rgb(230, 163, 8);">“If you do build a great experience, customers tell each other about that. Word of mouth is very powerful.</i><b>” - Jeff Bezos, Founder of Amazon</b>
+                        <i style="color:limegreen;">“If you do build a great experience, customers tell each other about that. Word of mouth is very powerful.</i><b>” - Jeff Bezos, Founder of Amazon</b>
                     </p>
                 </div>
 
@@ -40,8 +40,8 @@
                 </div>
                 <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-mb-0 mb-4">
                     <h6 class="text-uppercase fw-bold mb-4">Contact Us</h6>
-                    <p><i class="fa fa-home"> </i> Chandru</p>
-                    <p><i class="fa fa-envelope"> </i> chandrudakshina@gmail.com</p>
+                    <p><i class="fa fa-home"> </i> BuyZone.in</p>
+                    <p><i class="fa fa-envelope"> </i> thebuyzone@gmail.com</p>
                     <p><i class="fa fa-phone"> </i> +91 9750197074</p>
                 </div>
             </div>
